# bartenderbot

./: .env.example  .gitignore  Cargo.toml  README.md
data/: drinks.json  help.json  sandwiches.json
src/: main.rs
src/commands/: brewer.rs  help.rs  jputils.rs  mod.rs  roll.rs  sandwich.rs
